# Solar_Irradiance_Predictor

./: README.md  main.py  pyproject.toml  requirements.txt
data/: cleaned_solar_data_20230101_to_20240101.json  cleaned_solar_data_lat_51.54501_long_-0.00564_20230101_to_20240101.json  solar_data_20230101_to_20240101.json  solar_data_lat_51.54501_long_-0.00564_20230101_to_20240101.json
python_scripts/: data_cleaner.py  data_scraper_nasa.py  model.py  solar_irradiance_map.py  visualisation.py
