[tool.poetry]
name = "solar-energy-predictor"
version = "1"
description = "Predict solar energy output based on geographical placement by fetching relevant data"
authors = ["Sridharman"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.x"
pandas = "2.2.3"
branca = "0.8.0"
certifi = "2024.8.30"
charset-normalizer = "3.3.2"
contourpy = "1.3.0"
cycler = "0.12.1"
folium = "0.17.0"
fonttools = "4.54.1"
idna = "3.10"
Jinja2 = "3.1.4"
kiwisolver = "1.4.7"
MarkupSafe = "2.1.5"
matplotlib = "3.9.2"
numpy = "2.1.1"
packaging = "24.1"
pillow = "10.4.0"
pyparsing = "3.1.4"
python-dateutil = "2.9.0.post0"
pytz = "2024.2"
requests = "2.32.3"
seaborn = "0.13.2"
six = "1.16.0"
tzdata = "2024.2"
urllib3 = "2.2.3"
xyzservices = "2024.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"
mypy = "^1.11.2"
Sphinx = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
